--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
     margin-top: 20px;
   }
   
-  .btn {
+  .btn,.select {
     background-color: #FFE81F;
     color: #000;
     font-weight: 600;
