--- a/src/App.css
+++ b/src/App.css
@@ -140,3 +140,10 @@ body {
   border-radius: 8px;
   margin-top: 20px;
 }
+
+.d-flex{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40px;
+}
